k8s/app-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bookstore-app
  namespace: bookstore
spec:
  replicas: 1
  selector:
    matchLabels:
      app: bookstore-app
  template:
    metadata:
      labels:
        app: bookstore-app
    spec:
      containers:
        - name: app
          image: bookstore-app:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8085
          resources:
            requests:
              memory: "512Mi"
              cpu: "250m"
            limits:
              memory: "1Gi"
              cpu: "500m"
