k8s/app-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: bookstore-app
  namespace: bookstore
spec:
  selector:
    app: bookstore-app
  ports:
    - port: 8085
      targetPort: 8085
  type: ClusterIP
